# CharacteristicVelocityForOrbitChange

./: CMakeLists.txt
src/: CMakeLists.txt  ComplanarCircalOrbitsDeltaV.hpp  ComplanarEllipticObitsDeltaV.hpp  CoplanarCircularOrbit.hpp  CoplanarCircularOrbitsDeltaV.hpp  CoplanarEllipticOrbit.hpp  CoplanarEllipticOrbitsDeltaV.hpp  Elliptic.hpp  PlaneChangeManeuver.hpp  Types.h  file.cpp
tests/: CMakeLists.txt  test_Elliptic.cpp  test_PlaneRotation.cpp  test_TransferCircular.cpp  test_TransferElliptic.cpp  test_TransferOrbits.cpp
